--- a/pom.xml
+++ b/pom.xml
@@ -666,7 +666,16 @@
           <configuration>
             <rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</rerunFailingTestsCount>
             <forkedProcessTimeoutInSeconds>3600</forkedProcessTimeoutInSeconds>
-            <argLine>@{argLine} -Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx2g -Xms2g -XX:+PrintGCDetails</argLine>
+            <argLine>@{argLine}
+              -javaagent:${maven.multiModuleProjectDirectory}/appmap.jar
+              -Dappmap.output.directory=${maven.multiModuleProjectDirectory}/tmp/appmap
+              -Dfile.encoding=UTF-8
+              -Duser.language=en
+              -Duser.region=US
+              -showversion
+              -Xmx2g
+              -Xms2g
+              -Xlog:gc:stderr:time,level,tags</argLine>
             <failIfNoTests>false</failIfNoTests>
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks> <!-- to work around crash at https://github.com/junit-team/junit5/issues/801 -->
@@ -1388,7 +1397,7 @@
               <artifactId>maven-surefire-plugin</artifactId>
               <version>${maven.surefire.version}</version>
               <configuration>
-                <excludedGroups>external</excludedGroups>
+                  <excludedGroups>external</excludedGroups>
               </configuration>
             </plugin>
           </plugins>
