Only run tests for jetty-server
Skip testing jetty-util.

--- a/jetty-util/pom.xml
+++ b/jetty-util/pom.xml
@@ -58,6 +58,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <skipTests>true</skipTests>
           <systemPropertyVariables>
             <mavenRepoPath>${settings.localRepository}</mavenRepoPath>
           </systemPropertyVariables>
